sea-query-derive/tests/compile-fail/empty_list_iden.stderr
error: must be of the form `#[iden(flatten)]`
 --> $DIR/empty_list_iden.rs:8:7
  |
8 |     #[iden()]
  |       ^^^^^^
